VerilogAParser.jl/test/errors/ptr_deref.va
module ptr_deref(p, n);
    analog begin
        p=MTRLMOD->x;
    end
endmodule
